# laguna-backend

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Laguna.toml  MAINTAINERS  MAINTAINERS.md  README.md  build.rs  compose.yml  crates.js  help.html  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js  sqlx-data.json
.cargo/: README.md  config.toml
.github/: .codecov.yml  README.md  dependabot.yml
.sqlx/: query-01be6b6b02bdf1257a10d72b27a0a38edef4bf83d5b331c3debbd93b1eb284b9.json  query-0341f6f2ae3355ca6f8aefd356973795722a6c330c8b16a38786be7d1a81965d.json  query-03a97613bef328b0e923794b94c988c8c7e9731d5645215392668ca79951f990.json  query-03c49a6e99b8adae64612d7ffebc759b3fb2cec8aedae30056726fc10bde1e2b.json  query-0a30c20a01dcd80dcf7ef074f2a86038211c945bb0f5157c4eab419b6f093f30.json  query-0a564329d53eaee6014370ae7b107bd805865384b431f9cd086a1a3d322585a4.json  query-13fdd7b6d58d03e8a779b415a5ce1db2bd8008ddc0932c7b8b83bddd6eb93b7f.json  query-141364a5593e3510cc76b5a8719a4785d64531880925364c62cfa6c605d63c22.json  query-14f5be138708913ff10c862d7d1605281e5a335c435484626f6c4150c1756128.json  query-16c25fcc2ef79cb7b855803d3d65e96bcdb754945db7c91e3572d0c97ab61260.json  query-18148d22095ceb5d5e2a94f88c8eeb39bc74b1270e3670fe1b63da792c1cb4b8.json  query-1a89036d83f6fe1da1103c6f9acf3310f768f040edbd51248e30eb8e3aec66aa.json  query-1b1fb923e1796228ed7508f40aa601ebddc55d2168bf0aa526d496a2e8798c23.json  query-1ba8474451e92f238c551c73bde71d7471843770c7992268504b4f3ebed32c14.json  query-1bd98eb4c7cde288a79eedf444d086b01f72d72dac16b93c15fe108b41252762.json  query-1bf96d69f98d85d775471aa690dcfccb8813e3d0d6388dced289530a28407783.json  query-1ef6d8667674f4e815378f8f1a0db59837b30889a571d194646ad8cf2fa7a376.json  query-22e4f79295158b1e228753676a31d5630e71881bf8af593e7665c40fa4303b6b.json  query-262f34a64beb603f521b0f2b8089c44816aed411d63c030c0605571fff9c8dbe.json  query-27215bb31e491739bb5ffb223cd2cf3f33c6835955989b71373f495c6809ee74.json  query-2762450f277aca85912eff4f48071a94d0dddd2e9f30bd022ccde2ad11488f7a.json  query-2b34f98aef7ce080847baf9528496435de41ea415c94ad56df1380e4def7994d.json  query-2b50bc5355d44af50c26e2a07295ed3775d4122bb335eef310f50730150b4464.json  query-2b9d9f78c79c3fa51c783354138b5cf40a5094740415674552973b913f974f35.json  query-357c700bfe26c875f7d0938a67ff209c08eb142e62a6f76acd8094377ad35d3c.json  query-3583650964b48f0a47dd70a138482a43f61b85ae4c0f2826cf8e8dc38540c9b4.json  query-3697cf7139f68621f61ab5565f66260dbd20bb9f95f81979f5f53cb09cd19b95.json  query-38e2ce8598c88d975341196dc67773d61dd0accc1000027cff351195e580fb2f.json  query-3c92b40bcfab22749bea5646bec5886f28c5370248733831079742548792cc0e.json  query-3d997ddec8976ff122efd8341822931a3b44dc2cfd0f530cfba95d2a34bcd2bf.json  query-3fd399a611ebf506f2279a0df6763b122d5dd2a601779b8e473905ad0c8473de.json  query-454e5f7bb1378fa04a3ac2262d19daecf86e8d5da9303828c34e6d687f11ba5d.json  query-4904c99b97cb16984e0fc9a3678a1fdb8420f2c7e0b6e98f94c16624fe863e7a.json  query-4b9fdaa248fadda6c3fe132444eb58e57677a5b86b7053baa830ee7b93e5c363.json  (+80 more)
assets/: README.md
configs/: dev.toml
crates/laguna-backend-api/: Cargo.toml
crates/laguna-backend-api/queries/: download_insert.sql  download_lookup.sql  download_lookup_byhash.sql  download_update.sql  peer_get.sql  peer_insert.sql  peer_update.sql  rating_delete.sql  rating_insert.sql  rating_lookup.sql  rating_torrent_average.sql  stats_peer_get.sql  stats_peer_refresh.sql  stats_torrent_get.sql  stats_torrent_refresh.sql  stats_user_get.sql  stats_user_refresh.sql  torrent_delete.sql  torrent_get.sql  torrent_insert.sql  torrent_swarm.sql  torrent_swarm_complete_incomplete_noself.sql  torrent_swarm_noself.sql  torrent_update.sql  user_delete.sql  user_email_confirm.sql  user_get.sql  user_insert.sql  user_login_update.sql  user_lookup.sql  user_lookup_by_email_confirm_hash.sql  user_peers.sql  user_role_change.sql  user_torrents.sql  user_update.sql
crates/laguna-backend-api/src/: email_confirm.rs  error.rs  lib.rs  login.rs  meta.rs  misc.rs  peer.rs  rating.rs  register.rs  state.rs  stats.rs  torrent.rs  user.rs
crates/laguna-backend-api/src/error/: download.rs  mod.rs  peer.rs  rating.rs  torrent.rs  user.rs
crates/laguna-backend-api/src/helpers/: register.rs
crates/laguna-backend-api/tests/: auth.rs  peer.rs  rating.rs  stats.rs  torrent.rs  user.rs
crates/laguna-backend-api/tests/common/: mod.rs
crates/laguna-backend-config/: Cargo.toml
crates/laguna-backend-config/src/: lib.rs
crates/laguna-backend-dto/: Cargo.toml
crates/laguna-backend-dto/src/: already_exists.rs  lib.rs  login.rs  meta.rs  peer.rs  rating.rs  register.rs  role.rs  torrent.rs  torrent_rating.rs  user.rs
crates/laguna-backend-dto/src/validators/: login.rs  mod.rs
crates/laguna-backend-internal/: Cargo.toml
crates/laguna-backend-internal/src/: lib.rs
crates/laguna-backend-middleware/: Cargo.toml
crates/laguna-backend-middleware/src/: auth.rs  auth_helper.rs  consts.rs  exclusive.rs  hexify.rs  lib.rs  mime.rs
crates/laguna-backend-middleware/src/filters/: mod.rs  torrent.rs
crates/laguna-backend-model/: Cargo.toml
crates/laguna-backend-model/src/: behaviour.rs  consts.rs  download.rs  genre.rs  lib.rs  login.rs  misc.rs  peer.rs  rating.rs  register.rs  role.rs  speedlevel.rs  swarm.rs  torrent.rs  torrent_rating.rs  user.rs
crates/laguna-backend-model/src/validators/: login.rs
crates/laguna-backend-model/src/views/: mod.rs  stats.rs
crates/laguna-backend-model/tests/: crud.rs
crates/laguna-backend-setup/: Cargo.toml
crates/laguna-backend-setup/src/: lib.rs
crates/laguna-backend-tracker/: Cargo.toml
crates/laguna-backend-tracker-common/: Cargo.toml
crates/laguna-backend-tracker-common/src/: announce.rs  helpers.rs  info_hash.rs  lib.rs  peer.rs
crates/laguna-backend-tracker-http/: Cargo.toml
crates/laguna-backend-tracker-http/src/: announce.rs  lib.rs
crates/laguna-backend-tracker-udp/: Cargo.toml
crates/laguna-backend-tracker-udp/src/: lib.rs
crates/laguna-backend-tracker/src/: lib.rs  peer_id.rs
src/: main.rs
(+423 files in other folders)
