[package]
name = "laguna-backend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "kenpaicat <133065911+kenpaicat@users.noreply.github.com>",
    "kozabrada123 <59031733+kozabrada123@users.noreply.github.com>",
    "LinuxHeki <linuxheki@gmail.com>",
]
description = "Laguna backend source tree"
repository = "https://github.com/SloveniaEngineering/laguna-backend"
documentation = "https://sloveniaengineering.github.io/laguna-backend"

[workspace]
members = ["crates/*"]

[dependencies]
actix-web = "4"
sqlx = { version="0.7.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "ipnetwork",
    "migrate",
    "macros",
    "chrono",
    "json",
] }
env_logger = "0.10.0"
log = "0.4.20"
argon2 = { version = "*", features = ["std"] }
actix-jwt-auth-middleware = "0.3.0"
jwt-compact = "0.7.0"
sha2 = "0.10"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["serde", "v4", "fast-rng"] }
digest = { version = "0.10.7", default-features = false }
laguna = { package = "laguna-backend-internal", path = "crates/laguna-backend-internal" }
actix-cors = "0.6.4"
actix-settings = "*"
const_format = "*"
actix-service = "*"
secrecy = { version = "*", features = ["serde"] }

[dev-dependencies]

[features]
# Dummy feature until build scripts can detect cfg(doc).
# See: https://github.com/rust-lang/cargo/issues/8811
# See: https://github.com/rust-lang/cargo/issues/8944
# It seems that it was discontinued.
dox = []
