[package]
name = "laguna-backend"
version = "1.0.0-alpha"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "kenpaicat <133065911+kenpaicat@users.noreply.github.com>",
    "kozabrada123 <59031733+kozabrada123@users.noreply.github.com>",
    "LinuxHeki <linuxheki@gmail.com>",
]
description = "Laguna backend source tree"
repository = "https://github.com/SloveniaEngineering/laguna-backend"
documentation = "https://sloveniaengineering.github.io/laguna-backend"

[workspace]
members = ["crates/*"]

[dependencies]
actix-web = "4"
sqlx = { version="0.7.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "ipnetwork",
    "migrate",
    "macros",
    "chrono",
    "json",
] }
laguna = { package = "laguna-backend-internal", path = "crates/laguna-backend-internal" }
# FIXME: Bump to 0.7.* seems to break the program.
actix-settings = "0.6.0"

[dev-dependencies]

[features]
# Dummy feature until build scripts can detect cfg(doc).
# See: https://github.com/rust-lang/cargo/issues/8811
# See: https://github.com/rust-lang/cargo/issues/8944
# It seems that it was discontinued.
dox = []
