[package]
name = "laguna-backend-api"
version = "1.0.0-beta"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "kenpaicat <133065911+kenpaicat@users.noreply.github.com>",
    "kozabrada123 <59031733+kozabrada123@users.noreply.github.com>",
    "LinuxHeki <linuxheki@gmail.com>",
]
description = "Laguna backend source tree"
repository = "https://github.com/SloveniaEngineering/laguna-backend"
documentation = "https://sloveniaengineering.github.io/laguna-backend"


[dependencies]
laguna-backend-model = { path = "../laguna-backend-model" }
laguna-backend-middleware = { path = "../laguna-backend-middleware" }
actix-web = { version = "4", features = ["cookies"] }
sha-1 = "0.10.1"
sqlx = { version="0.7.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "ipnetwork",
    "migrate",
    "macros",
    "chrono",
    "json",
] }
actix-jwt-auth-middleware = "0.3.0"
actix-multipart-extract = "0.1.5"
jwt-compact = "0.7.0"
sha2 = "0.10"
log = "*"
chrono = { version = "*", features = ["serde"]}
uuid = { version = "*", features = ["serde", "v4", "fast-rng"] }
digest = { version = "0.10.7", default-features = false }
argon2 = { version = "*", features = ["std"] }
derive_more = "*"
env_logger = "*"
actix-multipart = "*"
const_format = "0.2.31"
serde = { version = "1.0", features = ["derive"]}
validator = { version = "0.16", features = ["derive"] }
actix-web-validator = "5.0.1"
futures = "*"
laguna-backend-dto = { path = "../laguna-backend-dto" }
laguna-backend-tracker = { path = "../laguna-backend-tracker" }
laguna-backend-tracker-common = { path = "../laguna-backend-tracker-common" }
laguna-backend-config = { path = "../laguna-backend-config" }
secrecy = { version = "*", features = ["serde"] }
rand = "*"
utoipa = { version = "3", features = ["actix_extras", "uuid", "chrono", "yaml"] }
bendy = { version = "^0.3", features = ["std", "serde"] }
postmark = {version = "0.10.0", features = ["reqwest-rustls-tls"]}
# serde_bencode = "*"

[dev-dependencies]
actix-http = "3.4.0"
serde_json = "1"
rustversion = "1.0"
fake = { version = "2.8.0" }
# Explanation of "testx" workaround: 
# See: https://github.com/cksac/fake-rs/issues/53
laguna-backend-model = { path = "../laguna-backend-model", features = ["testx"] }
laguna-backend-dto = { path = "../laguna-backend-dto", features = ["testx"] }
laguna-backend-setup = { path = "../laguna-backend-setup" }
