[package]
name = "laguna-backend-config"
version = "1.0.0-beta"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "kenpaicat <133065911+kenpaicat@users.noreply.github.com>",
    "kozabrada123 <59031733+kozabrada123@users.noreply.github.com>",
    "LinuxHeki <linuxheki@gmail.com>",
]
description = "Laguna backend source tree"
repository = "https://github.com/SloveniaEngineering/laguna-backend"
documentation = "https://sloveniaengineering.github.io/laguna-backend"


[dependencies]
serde = { version = "1", features = ["derive"] }
actix-settings = "*"
const_format = "*"
url = "2.4.1"
secrecy = { version = "*", features = ["serde"] }
cached = "*"