[package]
name = "laguna-backend-dto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "kenpaicat <133065911+kenpaicat@users.noreply.github.com>",
    "kozabrada123 <59031733+kozabrada123@users.noreply.github.com>",
    "LinuxHeki <linuxheki@gmail.com>",
]
description = "Laguna backend source tree"
repository = "https://github.com/SloveniaEngineering/laguna-backend"
documentation = "https://sloveniaengineering.github.io/laguna-backend"


[dependencies]
laguna-backend-model = { path = "../laguna-backend-model" }
laguna-backend-tracker-common = { path = "../laguna-backend-tracker-common" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "*", features = ["serde"] } 
actix-web-validator = "5.0.1"
actix-jwt-auth-middleware = "0.3.0"
uuid = { version = "*", features = ["serde", "v4", "fast-rng"] }
validator = { version = "0.16", features = ["derive", "unic"] }
actix-web = "4"
serde_bytes = "0.11.11"
serde_with = "3.3.0"
actix-multipart-extract = "0.1.5"
bendy = { version = "^0.3", features = ["std", "serde"] }
# serde_bencode = "*"

# Mark as optional when we don't use feature "testx".
fake = { version = "2.8", features=["derive", "uuid", "chrono", "http"], optional = true }
rand = { version = "*", optional = true }
utoipa = { version = "4", features = ["actix_extras", "uuid", "chrono", "yaml"] }

[features]
testx = ["dep:fake", "dep:rand"]
