[package]
name = "laguna-backend-internal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "kenpaicat <133065911+kenpaicat@users.noreply.github.com>",
    "kozabrada123 <59031733+kozabrada123@users.noreply.github.com>",
    "LinuxHeki <linuxheki@gmail.com>",
]
description = "Laguna backend source tree"
repository = "https://github.com/SloveniaEngineering/laguna-backend"
documentation = "https://sloveniaengineering.github.io/laguna-backend"


[dependencies]
laguna-backend-api = { path = "../laguna-backend-api" }
laguna-backend-model = { path = "../laguna-backend-model" }
laguna-backend-middleware = { path = "../laguna-backend-middleware" }
laguna-backend-tracker = { path = "../laguna-backend-tracker" }
laguna-backend-dto = { path = "../laguna-backend-dto" }
laguna-backend-setup = { path = "../laguna-backend-setup" }
laguna-backend-config = { path = "../laguna-backend-config" } 