[package]
name = "laguna-backend-middleware"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "kenpaicat <133065911+kenpaicat@users.noreply.github.com>",
    "kozabrada123 <59031733+kozabrada123@users.noreply.github.com>",
    "LinuxHeki <linuxheki@gmail.com>",
]
description = "Laguna backend source tree"
repository = "https://github.com/SloveniaEngineering/laguna-backend"
documentation = "https://sloveniaengineering.github.io/laguna-backend"

[dependencies]
actix-web = { version = "4", features = ["cookies"] }
argon2 = { version = "*", features = ["std"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "migrate",
    "macros",
    "time",
    "json",
] }
actix-jwt-auth-middleware = "0.3.0"
jwt-compact = "0.7.0"
sha2 = "0.10"
log = "*"
chrono = { version = "*", features = ["serde"]}
uuid = { version = "*", features = ["serde", "v4", "fast-rng"] }
digest = { version = "0.10.7", default-features = false }
derive_more = "*"
env_logger = "*"
sql-builder = "*"
serde = { version = "1.0", features = ["derive"]}
serde_json = "*"
futures-util = "*"
laguna-backend-model = { path = "../laguna-backend-model" }
laguna-backend-dto = { path = "../laguna-backend-dto" }