[package]
name = "laguna-backend-model"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.6.3", features = [
    "runtime-actix-rustls",
    "postgres",
    "uuid",
    "migrate",
    "macros",
    "chrono",
    "json",
] }
log = "0.4.19"
env_logger = "0.10.0"
sha2 = "0.10"
digest = { version = "0.10.7", default-features = false }
actix-jwt-auth-middleware = "0.3.0"
uuid = { version = "*", features = ["serde", "v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.11"
chrono = { version = "*", features = ["serde"] } 
fake = { version = "2.6", features=["derive", "always-true-rng"]}
rand = "*"
validator = { version = "0.16", features = ["derive", "unic"] }
actix-web-validator = "5.0.1"