[package]
name = "laguna-backend-model"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "kenpaicat <133065911+kenpaicat@users.noreply.github.com>",
    "kozabrada123 <59031733+kozabrada123@users.noreply.github.com>",
    "LinuxHeki <linuxheki@gmail.com>",
]
description = "Laguna backend source tree"
repository = "https://github.com/SloveniaEngineering/laguna-backend"
documentation = "https://sloveniaengineering.github.io/laguna-backend"

[dependencies]
actix-web = "4"
sqlx = { version = "0.6.3", features = [
    "runtime-actix-rustls",
    "postgres",
    "uuid",
    "migrate",
    "macros",
    "chrono",
    "json",
] }
log = "0.4.19"
env_logger = "0.10.0"
sha2 = "0.10"
digest = { version = "0.10.7", default-features = false }
actix-jwt-auth-middleware = "0.3.0"
uuid = { version = "*", features = ["serde", "v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.11"
chrono = { version = "*", features = ["serde"] } 
validator = { version = "0.16", features = ["derive", "unic"] }
actix-web-validator = "5.0.1"
serde_bencode = "0.2.3"

# Mark as optional when we don't use feature "testx".
fake = { version = "2.6", features=["derive", "uuid", "chrono", "http"], optional = true }
rand = { version = "*", optional = true }

[features]
# Dummy feature for workaround so we dont compile Faker into builds that dont need it.
# cfg_attr(test, ...) is broken with workspaces.
# See: https://github.com/cksac/fake-rs/issues/53
testx = ["dep:fake", "dep:rand"]
