[package]
name = "laguna-backend-setup"
version = "1.0.0-alpha"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "kenpaicat <133065911+kenpaicat@users.noreply.github.com>",
    "kozabrada123 <59031733+kozabrada123@users.noreply.github.com>",
    "LinuxHeki <linuxheki@gmail.com>",
]
description = "Laguna backend source tree"
repository = "https://github.com/SloveniaEngineering/laguna-backend"
documentation = "https://sloveniaengineering.github.io/laguna-backend"


[dependencies]
laguna_config = { package = "laguna-backend-config", path = "../laguna-backend-config" }
actix-web = "4"
actix-http = "*"
actix-jwt-auth-middleware = "0.3.0"
laguna-backend-middleware = { path = "../laguna-backend-middleware" }
laguna-backend-model = { path = "../laguna-backend-model" }
laguna-backend-api = { path = "../laguna-backend-api" }
laguna-backend-dto = { path = "../laguna-backend-dto" }
laguna-backend-tracker-common = { path = "../laguna-backend-tracker-common" }
laguna-backend-tracker-http = { path = "../laguna-backend-tracker-http" }
log = "*"
rustversion = "1.0"
sqlx = { version="0.7.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "ipnetwork",
    "migrate",
    "macros",
    "chrono",
    "json",
] }
jwt-compact = "0.7.0"
env_logger = "*"
argon2 = { version = "*", features = ["std"] }
secrecy = { version = "*", features = ["serde"] }
chrono = { version = "*", features = ["serde"]}
actix-settings = "*"
actix-service = "*"
actix-cors = "*"
const_format = "*"
cached = "*"
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
utoipa-redoc = { version = "*", features = ["actix-web"] }
utoipa = { version = "3", features = ["actix_extras", "uuid", "chrono", "yaml"] }