[package]
name = "laguna-backend-tracker-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "kenpaicat <133065911+kenpaicat@users.noreply.github.com>",
    "kozabrada123 <59031733+kozabrada123@users.noreply.github.com>",
    "LinuxHeki <linuxheki@gmail.com>",
]
description = "Laguna backend source tree"
repository = "https://github.com/SloveniaEngineering/laguna-backend"
documentation = "https://sloveniaengineering.github.io/laguna-backend"


[dependencies]
serde = { version = "*", features = ["derive"] }
actix-web = "4"
serde_bytes = "*"
serde_with = { version = "3.3.0", features = ["hex"] }
actix = "*"
sqlx = { version="0.7.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "ipnetwork",
    "migrate",
    "macros",
    "chrono",
    "json",
] }
url = { version = "*", features = ["serde"] }
utoipa = { version = "3", features = ["actix_extras", "uuid", "chrono", "yaml"] }
# This crate is so gay: bendy = { version = "^0.3", features = ["std", "serde"] }
serde_bencode = "*"