[package]
name = "laguna-backend-tracker-http"
version = "1.0.0-beta"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "kenpaicat <133065911+kenpaicat@users.noreply.github.com>",
    "kozabrada123 <59031733+kozabrada123@users.noreply.github.com>",
    "LinuxHeki <linuxheki@gmail.com>",
]
description = "Laguna backend source tree"
repository = "https://github.com/SloveniaEngineering/laguna-backend"
documentation = "https://sloveniaengineering.github.io/laguna-backend"


[dependencies]
laguna-backend-tracker-common = { path = "../laguna-backend-tracker-common" }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
utoipa = { version = "4.1.0", features = ["actix_extras", "uuid", "chrono", "yaml"] }
bendy = { version = "*", features = ["std", "serde"] }
laguna-backend-model = { path = "../laguna-backend-model" }